[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/kenyan coffee rg.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Menu.gd" type="Script" id=2]
[ext_resource path="res://Sprits/Buttons/Sound_on_pressed.png" type="Texture" id=3]
[ext_resource path="res://Sprits/Buttons/Sound_on.png" type="Texture" id=4]
[ext_resource path="res://Sounds/Music/Start.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sprits/Buttons/Sound_off.png" type="Texture" id=6]
[ext_resource path="res://Sprits/Buttons/Sound_off_pressed.png" type="Texture" id=7]
[ext_resource path="res://Sounds/SFX/Click_button_sfx.mp3" type="AudioStream" id=8]
[ext_resource path="res://Sprits/Buttons/Back.png" type="Texture" id=9]
[ext_resource path="res://Sprits/Buttons/Back_pressed.png" type="Texture" id=10]
[ext_resource path="res://Scenes/ParallaxBackg.tscn" type="PackedScene" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Texture" type="Sprite" parent="."]

[node name="Back_button" type="TouchScreenButton" parent="."]
position = Vector2( 865, 511 )
normal = ExtResource( 9 )
pressed = ExtResource( 10 )

[node name="Music" type="Label" parent="."]
margin_left = 480.0
margin_top = 124.0
margin_right = 537.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 1 )
text = "Music"

[node name="Mute_music" type="TouchScreenButton" parent="Music"]
position = Vector2( -46, 47 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="Play_music" type="TouchScreenButton" parent="Music"]
position = Vector2( 39, 47 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[node name="SFX" type="Label" parent="."]
margin_left = 489.0
margin_top = 296.0
margin_right = 529.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 2 )
text = "SFX"

[node name="Mute_SFX" type="TouchScreenButton" parent="SFX"]
position = Vector2( -55, 56 )
normal = ExtResource( 6 )
pressed = ExtResource( 7 )

[node name="Play_SFX" type="TouchScreenButton" parent="SFX"]
position = Vector2( 30, 56 )
normal = ExtResource( 4 )
pressed = ExtResource( 3 )

[node name="Music_bg" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "Music"

[node name="Click_button_SFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -20.0
bus = "SFX"

[node name="ParallaxBackg" parent="." instance=ExtResource( 11 )]

[connection signal="pressed" from="Back_button" to="." method="_on_Back_button_pressed"]
[connection signal="pressed" from="Music/Mute_music" to="." method="_on_Mute_music_pressed"]
[connection signal="pressed" from="Music/Play_music" to="." method="_on_Play_music_pressed"]
[connection signal="pressed" from="SFX/Mute_SFX" to="." method="_on_Mute_SFX_pressed"]
[connection signal="pressed" from="SFX/Play_SFX" to="." method="_on_Play_SFX_pressed"]
